--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,4 @@
 @import './base.css';
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 #app {
   max-width: 1280px;
@@ -32,7 +29,8 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    place-items: center;
     padding: 0 2rem;
+    width: 100%;
   }
 }
